--- a/src/MvxNativeApp.iOS/MvxNativeApp.iOS.csproj
+++ b/src/MvxNativeApp.iOS/MvxNativeApp.iOS.csproj
@@ -186,11 +186,8 @@
     <PackageReference Include="MvvmCross.Core">
       <Version>5.7.0</Version>
     </PackageReference>
-    <PackageReference Include="MvvmCross.iOS.Support">
-      <Version>5.7.0</Version>
-    </PackageReference>
-    <PackageReference Include="MvvmCross.iOS.Support.XamarinSidebar">
-      <Version>5.7.0</Version>
+    <PackageReference Include="MvvmCross.Plugin.Sidebar">
+      <Version>6.1.2</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
